--- a/coming-soon.html
+++ b/coming-soon.html
@@ -6,15 +6,15 @@
 		<meta name="viewport" content="width=device-width" />
 		<meta http-equiv="content-security-policy" content="">
 		<link href="./_app/immutable/assets/_layout-3837ae13.css" rel="stylesheet">
-		<link rel="modulepreload" href="./_app/immutable/start-6afbc774.js">
+		<link rel="modulepreload" href="./_app/immutable/start-708a1a00.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/index-271e2ad1.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/singletons-9b5edc28.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/preload-helper-9b728935.js">
-		<link rel="modulepreload" href="./_app/immutable/components/pages/_layout.svelte-86b1e552.js">
+		<link rel="modulepreload" href="./_app/immutable/components/pages/_layout.svelte-5b0cec53.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/index-a3327757.js">
 		<link rel="modulepreload" href="./_app/immutable/modules/pages/_layout.ts-b8ee4d7c.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/_layout-1daba58d.js">
-		<link rel="modulepreload" href="./_app/immutable/components/pages/coming-soon/_page.svelte-bb911588.js"><title>Indigo Development | Coming soon!</title><!-- HEAD_svelte-2l6sgm_START --><link rel="preconnect" href="https://fonts.googleapis.com"><link rel="preconnect" href="https://fonts.gstatic.com" crossorigin="anonymous"><link async href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;900&display=swap" rel="stylesheet"><!-- HEAD_svelte-2l6sgm_END --><!-- HEAD_svelte-2ubg9j_START --><meta name="description" content="Hi, my name is Indigo. No that's not my real name, it's an alias, I also go by Cobblestone. I
+		<link rel="modulepreload" href="./_app/immutable/components/pages/coming-soon/_page.svelte-bb911588.js"><title>Indigo Development | Coming soon!</title><!-- HEAD_svelte-1axynh6_START --><link rel="preconnect" href="https://fonts.googleapis.com"><link rel="preconnect" href="https://fonts.gstatic.com" crossorigin="anonymous"><link defer href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;900&display=swap" rel="stylesheet"><!-- HEAD_svelte-1axynh6_END --><!-- HEAD_svelte-2ubg9j_START --><meta name="description" content="Hi, my name is Indigo. No that's not my real name, it's an alias, I also go by Cobblestone. I
 			am a frontend developer designing beautiful and featureful UIs like this one."><meta name="keywords" content="development dev indigo frontend developer"><!-- HEAD_svelte-2ubg9j_END -->
 	</head>
 	<body data-sveltekit-preload-data="hover">
@@ -35,7 +35,7 @@
 
 
 		<script type="module" data-sveltekit-hydrate="1w3s62y">
-			import { start } from "./_app/immutable/start-6afbc774.js";
+			import { start } from "./_app/immutable/start-708a1a00.js";
 
 			start({
 				env: {},
@@ -50,7 +50,7 @@
 				},
 				paths: {"base":"","assets":""},
 				target: document.querySelector('[data-sveltekit-hydrate="1w3s62y"]').parentNode,
-				version: "1669926764728"
+				version: "1669926959086"
 			});
 		</script>
 	</div>
