--- a/.svelte-kit/output/prerendered/pages/contact.html
+++ b/.svelte-kit/output/prerendered/pages/contact.html
@@ -2,28 +2,27 @@
 <html lang="en">
 	<head>
 		<meta charset="utf-8" />
-		<link rel="icon" href="./favicon.png" />
-		<link rel="apple-touch-icon" sizes="180x180" href="./apple-touch-icon.png">
-		<link rel="icon" type="image/png" sizes="32x32" href="./favicon-32x32.png">
-		<link rel="icon" type="image/png" sizes="16x16" href="./favicon-16x16.png">
-		<link rel="manifest" href="./site.webmanifest">
-		<link rel="mask-icon" href="./safari-pinned-tab.svg" color="#5bbad5">
-		<meta name="msapplication-TileColor" content="#da532c">
-		<meta name="theme-color" content="#ffffff">
+		<link rel="apple-touch-icon" sizes="180x180" href="./apple-touch-icon.png" />
+		<link rel="icon" type="image/png" sizes="32x32" href="./favicon-32x32.png" />
+		<link rel="icon" type="image/png" sizes="16x16" href="./favicon-16x16.png" />
+		<link rel="manifest" href="./site.webmanifest" />
+		<link rel="mask-icon" href="./safari-pinned-tab.svg" color="#5bbad5" />
+		<meta name="theme-color" content="#4F46E5" />
 
 		<meta name="viewport" content="width=device-width" />
 		<meta http-equiv="content-security-policy" content="">
-		<link href="./_app/immutable/assets/_layout-95d71ebd.css" rel="stylesheet">
-		<link rel="modulepreload" href="./_app/immutable/start-574d12cc.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/index-1c56a37f.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/singletons-827566c2.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/preload-helper-9b728935.js">
-		<link rel="modulepreload" href="./_app/immutable/components/pages/_layout.svelte-04feae9f.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/index-2f31f367.js">
-		<link rel="modulepreload" href="./_app/immutable/modules/pages/_layout.ts-b8ee4d7c.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/_layout-1daba58d.js">
-		<link rel="modulepreload" href="./_app/immutable/components/pages/contact/_page.svelte-75f97977.js"><title>Indigo Development | Coming soon!</title><!-- HEAD_svelte-1jhvysu_START --><link rel="preconnect" href="https://fonts.googleapis.com"><link rel="preconnect" href="https://fonts.gstatic.com" crossorigin="anonymous"><link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;900&display=swap" rel="stylesheet"><!-- HEAD_svelte-1jhvysu_END --><!-- HEAD_svelte-2ubg9j_START --><meta name="description" content="Hi, my name is Indigo. No that's not my real name, it's an alias, I also go by Cobblestone. I
-			am a frontend developer designing beautiful and featureful UIs like this one."><meta name="keywords" content="development dev indigo frontend developer"><!-- HEAD_svelte-2ubg9j_END -->
+		<link href="./_app/immutable/assets/_layout-fd3b0975.css" rel="stylesheet">
+		<link rel="modulepreload" href="./_app/immutable/start-00c3ad28.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/index-9686e97b.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/singletons-67f82f14.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/index-d231d83a.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/preload-helper-41c905a7.js">
+		<link rel="modulepreload" href="./_app/immutable/components/pages/_layout.svelte-21f2b5df.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/index-fc1aa505.js">
+		<link rel="modulepreload" href="./_app/immutable/modules/pages/_layout.ts-9cbb603b.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/_layout-da46b06b.js">
+		<link rel="modulepreload" href="./_app/immutable/components/pages/contact/_page.svelte-035d5a43.js"><title>Indigo Development | Coming soon!</title><!-- HEAD_svelte-1cby8hr_START --><link rel="preconnect" href="https://fonts.googleapis.com"><link rel="preconnect" href="https://fonts.gstatic.com" crossorigin="anonymous"><link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;900&display=swap" rel="stylesheet"><!-- HEAD_svelte-1cby8hr_END --><!-- HEAD_svelte-i1jt7r_START --><meta name="description" content="Hi, my name is Indigo. No that's not my real name, it's an alias, I also go by Cobblestone. I
+			am a frontend developer designing beautiful and featureful UIs like this one."><meta name="keywords" content="development dev indigo frontend developer"><!-- HEAD_svelte-i1jt7r_END -->
 	</head>
 	<body data-sveltekit-preload-data="hover">
 		<div style="display: contents">
@@ -35,10 +34,10 @@
 
 
 
-<nav class="w-full fixed py-8 md:py-3 z-50 bg-indigo-600 bg-opacity-10 transition-all"><div class="flex justify-between items-center h-auto transition-all"><a href="/"><img src="indigo.svg" alt="Indigo logo" class="h-8 cursor-pointer"></a>
+<nav class="w-full fixed py-8 md:py-3 z-50 bg-indigo-600 bg-opacity-10 transition-all"><div class="flex justify-between items-center h-auto transition-all"><a href="/"><img src="indigo.svg" alt="Indigo logo" class="h-8 cursor-pointer" height="32" width="128"></a>
 		<div class="flex flex-row justify-between items-center mr-4 w-auto md:w-1/3 lg:w-1/4 xl:w-1/5"><a href="/creations" class="text-neutral-200 font-semibold text-xs bg-indigo-600 p-2 rounded-sm hover:bg-indigo-700 transition-colors">Creations
-					<img src="terminal-solid.svg" alt="terminal icon" width="12" class="inline-block ml-2 invert"></a>
-				<button class="flex flex-col"><img src="bars-solid.svg" alt="bars" class="ml-4 invert cursor-pointer" width="24">
+					<img src="terminal-solid.svg" alt="terminal icon" width="12" height="12" class="inline-block ml-2 invert"></a>
+				<button class="flex flex-col"><img src="bars-solid.svg" alt="bars" class="ml-4 invert cursor-pointer" width="24" height="24">
 					</button></div></div></nav>
 
 
@@ -48,23 +47,19 @@
 
 
 
-		<script type="module" data-sveltekit-hydrate="7v1cem">
-			import { start } from "./_app/immutable/start-574d12cc.js";
+		<script type="module" data-sveltekit-hydrate="164n26g">
+			import { start } from "./_app/immutable/start-00c3ad28.js";
 
 			start({
 				env: {},
+				paths: {"base":"","assets":""},
+				target: document.querySelector('[data-sveltekit-hydrate="164n26g"]').parentNode,
+				version: "1671282638516",
 				hydrate: {
-					status: 200,
-					error: null,
 					node_ids: [0, 3],
-					params: {},
-					route: {"id":"/contact"},
 					data: [null,null],
 					form: null
-				},
-				paths: {"base":"","assets":""},
-				target: document.querySelector('[data-sveltekit-hydrate="7v1cem"]').parentNode,
-				version: "1670098480385"
+				}
 			});
 		</script>
 	</div>
